# google-adk-py

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
analyst/: agent.py
analyst/.adk/: session.db
analyst/shared/: http_client.py
analyst/tools/: web_search_skill.py
news_agent/: agent.py
news_agent/.adk/: session.db
news_agent/tools/: news_search.py
